2012-07-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pk2bm.c: Cast arg2 of readchar() to avoid MSVC warning.

2012-07-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/ps2pk.test (new): Shell script for a test case.
	* tests/Symbol.afm, tests/Symbol.pfb (new): Test input.
	* tests/Symbol.pfa, tests/Symbol.alpha.{hex,pix},
	tests/Symbol10.300pk (new): Expected output.
	* Makefile.am: Adapted.

2012-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mag.c, pk2bm.c: Use binary mode for output files (from W32TeX).

	* pfb2pfa.c: Drop unused ambiguous code.

	* Makefile.am: Pk2bm does not use KPATHSEA.
	* pk2bm.c, pkin.[ch]: ANSI C function prototypes and definitions.

2011-07-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type1.c [FABS, CEIL, FLOOR]: Use routines from libm, the
	evaluation order of tmpx in the original macros is undefined
	by the C-standard!
	(ComputeStem): Fix `ambiguous else' bug (also present in t1lib
	5.1.2, compare libXfont 1.3.x from XOrg-7.4).

2011-07-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* type1.c (PSFakePop): Non-void function should return a value.
	Reported by Jack Howarth <howarth@bromo.med.uc.edu>
	Patch from Akira, [tex-live] Sun, 17 Jul 2011 22:39:30.

	* Makefile.am (AM_CFLAGS): Prepare for compiler warnings.

2011-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* README: Fixed a typo.

2011-05-26  Karl Berry  <karl@tug.org>

	* README: clarify license per authors.

2011-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* t1funcs.c (Type1OpenScalable): Cast ev[i] to 'unsigned char *'
	to avoid 'differ in signedness' warning.

2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ps2pk.c (main): `program_invocation_name' has been renamed
	into `kpse_invocation_name'.

2010-03-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ps2pk.c: Use kpse_set_program_name() instead of
	kpse_set_progname().

2010-02-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: List all used header files.
